--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="8dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +24,7 @@
         tools:listitem="@layout/pokemon_item" />
 
     <ImageView
+        android:layout_margin="8dp"
         android:id="@+id/iv_pokedex"
         android:layout_width="match_parent"
         android:layout_height="65dp"
